--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="shortcut icon" href="src/assets/favicon.ico" type="image/x-icon">
+      <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css">
+      <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
